--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Star Wars Game</title>
 </head>
 
-<body style="background-image: url('/assets/img/star_wars_background.jpg');">
+<body style="background-image: url('star_wars_background.jpg');">
     <h1 class="text-center my-3">Star Wars RPG!</h1>
     <h4 class="text-center mb-4 select">Select Your Character!</h4>
     <section class="characters d-flex justify-content-around " id="characters">
