--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
     <title>Star Wars Game</title>
 </head>
 
-<body style="background-image: url('star_wars_background.jpg');">
+<body>
     <h1 class="text-center my-3">Star Wars RPG!</h1>
     <h4 class="text-center mb-4 select">Select Your Character!</h4>
     <section class="characters d-flex justify-content-around " id="characters">
         <div class="figure text-center p-2" id="figure1">
-            <p>Obi-Wan Kenobi</p> <img src="assets/img/obi-wan.jpg" alt="">
+            <p>Obi-Wan Kenobi</p> <img src="img/obi-wan.jpg" alt="">
             <p class="mt-2" id="health" data="120">120</p><button type="submit" class="button"
                 id="btnfigure1">Select</button>
         </div>
         <div class="figure text-center p-2" id="figure2">
-            <p>Luke Skywalker</p> <img src="assets/img/luke-skywalker.jpg" alt="">
+            <p>Luke Skywalker</p> <img src="/img/luke-skywalker.jpg" alt="">
             <p class="mt-2 " id="health" data="100">100</p><button type="submit" class="button"
                 id="btnfigure2">Select</button>
         </div>
         <div class="figure text-center p-2" id="figure3">
-            <p>Darth Sidious</p><img src="assets/img/darth-sidious.png" alt="">
+            <p>Darth Sidious</p><img src="img/darth-sidious.png" alt="">
             <p class="mt-2" id="health" data="150">150</p><button type="submit" class="button"
                 id="btnfigure3">Select</button>
         </div>
         <div class="figure text-center p-2" id="figure4">
-            <p>Darth Maul</p><img src="assets/img/darth-maul.jpg" alt="">
+            <p>Darth Maul</p><img src="img/darth-maul.jpg" alt="">
             <p class="mt-2" id="health" data="180">180</p><button type="submit" class="button"
                 id="btnfigure4">Select</button>
         </div>
