--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 id="btnfigure1">Select</button>
         </div>
         <div class="figure text-center p-2" id="figure2">
-            <p>Luke Skywalker</p> <img src="/img/luke-skywalker.jpg" alt="">
+            <p>Luke Skywalker</p> <img src="img/luke-skywalker.jpg" alt="">
             <p class="mt-2 " id="health" data="100">100</p><button type="submit" class="button"
                 id="btnfigure2">Select</button>
         </div>
